--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
         "symfony/debug-bundle": "^5.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.1",
-        "symfony/var-dumper": "^5.1"
+        "symfony/var-dumper": "^5.1",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "config": {
         "optimize-autoloader": true,
